[package]
name = "raw-mqtt-lib"
version = "0.1.0"
edition = "2021"
authors = ["Federico Cristofani"]
description = "Simpel Mqtt client library"

[lib]
name = "raw_mqtt"
path = "src/lib.rs"

[features]
pub_stream = []


[dependencies]

mqttbytes = "0.6.0"
quinn_rustls = {package = "rustls", version = "0.21.8", default-features = false, features = ["dangerous_configuration", "quic"]}

# Utility crates
clap = { version = "4.4.8", features = ["derive"] }
env_logger = { version = "*"}
log = { version = "*" }
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
bytes = "1.5.0"
webpki-roots = "0.26.0"
rustls-native-certs = "0.6.3"

# Asynchronous crates
futures = "0.3.29"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version =  "0.7.10", features = ["rt"] }
tokio-rustls = "0.25.0"
quinn="0.10.2"
async-channel = "2.1.1"
async-trait = "0.1.77"
chrono = { version = "0.4.32", features = [] }
